add search profile

--- a/public/css/regMemberStyle.css
+++ b/public/css/regMemberStyle.css
@@ -3,15 +3,15 @@
 .my-button {
     display: inline-block;
     margin: 46px; /* space between buttons */
-    /*margin-left: 200px; */
-    margin-top: 130px;
+    /* margin-left: 50px; */
+    margin-top: 100px;
     background: rgb(206, 3, 12); /* background color */
     color: rgb(255, 255, 255); /* text color */
     font-size: 1.5em;
     font-family: ‘Georgia’, serif;
     /*font-style: italic; */
     border-radius: 0px; /* rounded corners */
-    padding: 20px 150px; /* space around text */
+    padding: 20px 130px; /* space around text */
     -moz-transition: all 0.2s;
     -webkit-transition: all 0.2s;
     transition: all 0.2s;
@@ -34,7 +34,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-left: 200px;
+    margin-left: 50px;
     margin-bottom: 300px;
 }
 
@@ -50,7 +50,7 @@ img {
 
 .wrapper .sidebar{
   width: 200px;
-  height: 84%;
+  height: 90%;
   background: rgb(206, 3, 12);
   padding: 30px 0px;
   position: fixed;
@@ -77,8 +77,24 @@ img {
   color: #fff;
 }
  
-
 .wrapper .main_content{
   width: 100%;
   background:lightgrey;
+}
+
+#bottom {
+  position: absolute;
+  bottom: 0;
+  left: 400px;
+  font-size: 20px;
+}
+
+.scrh-prof{
+  text-decoration: underline;
+  color: rgb(206, 3, 12);
+}
+
+.scrh-prof:hover {
+  color: rgb(119, 0, 6);
+  transition: .3s;
 }
