--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,7 @@ body{
    background: lightgray;
 }
 
+/* header */
 .title {
     font-weight: bold;
     font-size: 50px;
@@ -12,19 +13,10 @@ body{
     width: 120px;
     margin-left: 30px;
  }
+ /* header */
 
- .home-container{
-width: auto;
-min-height: 90%;
-background-color: lightgray;
-padding: 40px;;
-display: flex;
-padding: 20px;
-justify-content: space-evenly;
-align-items: center;
-height: 100%;
- }
-
+ 
+/* .search */
  .button1{
    color: white;
    text-align: center;
@@ -36,6 +28,16 @@ height: 100%;
     margin-right: 10px;
  }
 
+ .search input[type=text] {
+   padding: 6px;
+   margin-top: 8px;
+   margin-left: 25px;
+   border: none;
+   font-size: 17px;
+ }
+/* .search */
+
+/* add,vote,result */
  .button2{
    color: white;
    text-align: center;
@@ -47,16 +49,9 @@ height: 100%;
     float:right;
     margin-right: 10px;
  }
+ /* add,vote,result */
 
- .homepage{
-   color: yellow;
-   background-color: rgb(206, 3, 12);
-   font-weight: bolder;
-   font-size: 20px;
-   border-radius: 12px;
-   padding: 15px;
- }
- 
+ /* footer */
  .footer{
    position: fixed;
    left: 0;
@@ -65,6 +60,8 @@ height: 100%;
    text-align: end;
    background: white;
  }
+/* footer */
+
 mark.red{
    color: red;
    background: lightgray;
@@ -75,14 +72,6 @@ mark.red{
    font-size: 18px;
    margin-left: 25px;
 }
-
-.search input[type=text] {
-   padding: 6px;
-   margin-top: 8px;
-   margin-left: 25px;
-   border: none;
-   font-size: 17px;
- }
  
  .center{
    font-size: 35px;
@@ -136,4 +125,9 @@ mark.red{
     padding: 12px;
     float:right;
     margin-right: 10px;
+}
+
+.candidatefull{
+   width: 150px;
+   height: 170px;
 }
